--- a/angular.json
+++ b/angular.json
@@ -1,5 +1,8 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
+  "cli": {
+    "analytics": "f0d76dda-ffbf-4a17-8422-da33cc091cd5"
+  },
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
